# HourlyChime

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  dev.eddiedover.hourly_chime.metainfo.xml  package.sh  resources.qrc
.github/workflows/: release.yml
assets/images/: icon.rgba
packaging/linux/: hourly-chime.desktop  install.sh  uninstall.sh
src/: Config.cpp  Config.h  HourlyChime.cpp  HourlyChime.h  SettingsDialog.cpp  SettingsDialog.h  SynthGenerator.cpp  SynthGenerator.h  audio.rs  config.rs  gui.rs  main.cpp  main.rs  resources.qrc  tray.rs
