[package]
name = "hourly_chime"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0"
description = "Plays an hourly chime as notes, an audio file, or multiple files like a grandfather clock."
authors = ["Eddie Dover <ed@eddiedover.dev>"]
repository = "https://github.com/EddieDover/HourlyChime"
documentation = "https://docs.rs/HourlyChime"
homepage = "https://github.com/EddieDover/HourlyChime"
readme = "README.md"
keywords = ["music","clock", "hourly"]
categories = []
exclude = []

[dependencies]
tao = "0.30.8"
rodio = "0.20.1"
chrono = "0.4.39"
anyhow = "1.0.95"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
directories = "6.0.0"
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
rfd = "0.16.0"
tokio = { version = "1.48.0", features = ["full"] }
rand = "0.9.2"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.19.2"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3.3", features = ["blocking"] }

[package.metadata.generate-rpm]
vendor = "Eddie Dover <ed@eddiedover.dev>"
packager = "Eddie Dover <ed@eddiedover.dev>"
assets = [
    { source = "target/release/hourly_chime", dest = "/usr/bin/hourly_chime", mode = "755" },
    { source = "packaging/linux/hourly-chime.desktop", dest = "/usr/share/applications/hourly-chime.desktop", mode = "644" },
    { source = "assets/images/icon.png", dest = "/usr/share/icons/hicolor/256x256/apps/hourly-chime.png", mode = "644" },
    { source = "dev.eddiedover.hourly_chime.metainfo.xml", dest = "/usr/share/metainfo/", mode = "644" }
]
